@@ -93,7 +93,7 @@ public:
       // Update the process and host mapping in SimGrid.
       XBT_DEBUG("Migrating process %li from %s to %s", my_proc_id, cur_host->get_cname(), migrate_to_host->get_cname());
       TRACE_smpi_process_change_host(my_proc_id, migrate_to_host);
-      simgrid::s4u::this_actor::migrate(migrate_to_host);
+      simgrid::s4u::this_actor::set_host(migrate_to_host);
     }
 
     smpilb_bar.wait();
